--- a/HW-06/HW-06-02/index.html
+++ b/HW-06/HW-06-02/index.html
@@ -7,14 +7,14 @@
     <title>Watch</title>
 </head>
 <body>
-    <div class="background">
-        <div class="watch">
-            <div class="time">
-                <div class="h"></div>
-                <div class="m"></div>
-                <div class="s"></div>
+    <div class="block block_border-radius_15px block_color_tan block_size_800x350">
+        <div class="watch watch_border-radius_15px watch_background-color_jet watch_size_750x300 watch_font_orbitron watch_font-size_130px watch_font-color_carmine">
+            <div class="time watch__time">
+                <div class="h time__hour"></div>
+                <div class="m time__minute"></div>
+                <div class="s time__second"></div>
             </div>
-            <div class="date"></div>
+            <div class=" date watch__date watch__date_font_times watch__date_font-size_25px watch__date_font-color_white"></div>
         </div>
     </div>
     <script src="main.js"></script>
