--- a/HW-08/index.html
+++ b/HW-08/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 <ul class="lessons">
-    <li><a href="HW-01-01-SW/index.html">Star Wars</li>
-    <li><a href="HW-01-02-poems/index.html">Poems</li>
+    <li><a href="HW-08-01/index.html">Grid</li>
+    <li><a href="HW-08-02/index.html">Привет, мир!</li>
+    <li><a href="HW-08-03/index.html">Variables</li>
 </ul>
 </body>
 </html>
