--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 <ul class="lessons">
-    <li><a href=".HW-01/index.html">Task</li>
-    <li><a href=".HW-02/index.html">Task</li>
+    <li><a href="HW-01/index.html">Task</li>
+    <li><a href="HW-02/index.html">Task</li>
     <li>Task</li>
     <li>Task</li>
     <li>Task</li>
     <li>Task</li>  
     <li>Task</li> 
-    <li>Task</li>     
+    <li><a href="HW-08/index.html">Task</li>     
 </ul>
 </body>
 </html>
