--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 <ul class="lessons">
     <li><a href="HW-01/index.html">Task</li>
-    <li><a href="HW-02/index.html">Task</li>
-    <li>Task</li>
-    <li>Task</li>
-    <li>Task</li>
-    <li>Task</li>  
-    <li>Task</li> 
+    <li><a href="HW-02/HW-02-01-tree/tree.html">Task</li>
+    <li><a href="HW-03/index.html">Task</li>
+    <li><a href="HW-04/HW-04-01-chess/index.html">Task</li>
+    <li><a href="HW-05/index.html">Task</li>
+    <li><a href="HW-06/index.html">Task</li>  
+    <li><a href="HW-07/index.html">Task</li> 
     <li><a href="HW-08/index.html">Task</li>     
 </ul>
 </body>
