add 9 task and other changes

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 </head>
 <body>
 <ul class="lessons">
-    <li><a href="HW-01/index.html">Task</li>
-    <li><a href="HW-02/HW-02-01-tree/tree.html">Task</li>
-    <li><a href="HW-03/index.html">Task</li>
-    <li><a href="HW-04/HW-04-01-chess/index.html">Task</li>
-    <li><a href="HW-05/index.html">Task</li>
-    <li><a href="HW-06/index.html">Task</li>  
-    <li><a href="HW-07/index.html">Task</li> 
-    <li><a href="HW-08/index.html">Task</li>     
+    <li><a href="HW-01/index.html">HW-01</li>
+    <li><a href="HW-02/HW-02-01-tree/tree.html">HW-02</li>
+    <li><a href="HW-03/index.html">HW-03</li>
+    <li><a href="HW-04/HW-04-01-chess/index.html">HW-04</li>
+    <li><a href="HW-05/index.html">HW-05</li>
+    <li><a href="HW-06/index.html">HW-06</li>  
+    <li><a href="HW-07/index.html">HW-07</li> 
+    <li><a href="HW-08/index.html">HW-08</li>   
+    <li><a href="HW-09/index.html">HW-09</li>    
 </ul>
 </body>
 </html>
