--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Start</title>
+    <title>HW courses</title>
 </head>
 <body>
 <ul class="lessons">
@@ -18,6 +18,7 @@
     <li><a href="HW-08/index.html">HW-08</li>   
     <li><a href="HW-09/index.html">HW-09</li>
     <li><a href="HW-10/index.html">HW-10</li>    
+    <li><a href="HW-11/index.html">HW-11</li>    
 </ul>
 </body>
 </html>
